# acs-aac-repo

./: README.md
mtphpc/cp2k/: README.md
mtphpc/cp2k/ar108/: ar108-md.mkv
mtphpc/cp2k/ar108/output/: ar108-1.ener  ar108-1.restart  ar108-1.restart.bak-1  ar108-1.restart.bak-2  ar108-1.restart.bak-3  ar108-pos-1.xyz  ar108.out
mtphpc/cp2k/ar108/src/: ar108.inp
mtphpc/cp2k/docs/: cp2k-presentation.pptx  cp2k.pptx
mtphpc/cp2k/h2/: h2-md.mkv
mtphpc/cp2k/h2/output/: h2-1.ener  h2-1.restart  h2-1.restart.bak-1  h2-1.restart.bak-2  h2-1.restart.bak-3  h2-RESTART.wfn  h2-RESTART.wfn.bak-1  h2-RESTART.wfn.bak-2  h2-RESTART.wfn.bak-3  h2-pos-1.xyz  h2.out
mtphpc/cp2k/h2/src/: h2.inp
research/A1-S1/: Research Report.pptx
research/A1-S2/: Research-Report.docx  Research-Report.pptx
smpa/: README.md
smpa/course/docs/: Speculative Multithreading Execution.docx  Speculative Multithreading Execution.pptx  ~$eculative Multithreading Execution.docx
smpa/lab1/: Branch Prediction.docx  ~$anch Prediction.docx  ~WRL3040.tmp
smpa/lab1/docs/: Schemes of Branch Prediction.docx  Schemes of Branch Prediction.pptx
smpa/lab2/: Intel Virtualization Technology.docx  ~$anch Prediction.docx
smpa/lab2/docs/: Intel Virtualization Technology.docx
smpa/lab3/: ~$multaneous Multithreading.docx
smpa/lab3/docs/: Simultaneous Multithreading.docx
smpa/lab4/: Asynchronous Processors.docx
smpa/lab4/docs/: Asynchronous Processors.docx
smpa/lab5/docs/: Dynamic Branch Prediction with Perceptrons.docx
smpa/project/docs/: Multithreading MPI Communication.docx  Multithreading MPI Communication.pptx
sptrm/lab2/reader_indexer_ros_pkg/: CMakeLists.txt  package.xml
sptrm/lab2/reader_indexer_ros_pkg/input/: input_file.txt
sptrm/lab2/reader_indexer_ros_pkg/src/: indexer.cpp  reader.cpp
sptrm/lab3/temp_converter_ros_pkg/: CMakeLists.txt  package.xml
sptrm/lab3/temp_converter_ros_pkg/msg/: CelsiusTemperature.msg  FahrenheitTemperature.msg  KelvinTemperature.msg
sptrm/lab3/temp_converter_ros_pkg/src/: Celsius2FahrenheitClient.cpp  Celsius2FahrenheitServer.cpp  Celsius2KelvinClient.cpp  Celsius2KelvinServer.cpp  Fahrenheit2CelsiusClient.cpp  Fahrenheit2CelsiusServer.cpp  Fahrenheit2KelvinClient.cpp  Fahrenheit2KelvinServer.cpp  Kelvin2CelsiusClient.cpp  Kelvin2CelsiusServer.cpp  Kelvin2FahrenheitClient.cpp  Kelvin2FahrenheitServer.cpp
sptrm/lab3/temp_converter_ros_pkg/srv/: Celsius2Fahrenheit.srv  Celsius2Kelvin.srv  Fahrenheit2Celsius.srv  Fahrenheit2Kelvin.srv  Kelvin2Celsius.srv  Kelvin2Fahrenheit.srv
sptrm/lab4/: .~lock.Husky.odt#  husky.txt
sptrm/lab4/square_husky_driver_ros_pkg/: CMakeLists.txt  package.xml
sptrm/lab4/square_husky_driver_ros_pkg/src/: huskyDriverPublisher.cpp
